# helix-agent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: basic_async.py  debug_provider.py  helix_vs_autogen_crewai.py  testing_Web.py  with_tools.py  workflow.py
helix-lib/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-all.txt  requirements.txt
helix-lib/examples/: basic_sync.py  debug_provider.py  helix_vs_autogen_crewai.py  with_tools.py
helix-lib/src/helix/: __init__.py  config.py  config_store.py  context.py  errors.py  interfaces.py
helix-lib/src/helix/adapters/: autogen.py  crewai.py  langchain.py  universal.py
helix-lib/src/helix/cache/: controller.py  plan.py  prefix.py  semantic.py
helix-lib/src/helix/cli/: __main__.py
helix-lib/src/helix/context_engine/: compactor.py  engine.py  preflight.py
helix-lib/src/helix/core/: __init__.py  agent.py  session.py  team.py  tool.py  workflow.py
helix-lib/src/helix/eval/: gate.py  monitor.py  scoring.py  suite.py  trajectory.py
helix-lib/src/helix/memory/: store.py  wal.py
helix-lib/src/helix/memory/backends/: inmemory.py
helix-lib/src/helix/models/: complexity.py  embedder.py  router.py
helix-lib/src/helix/models/providers/: anthropic.py  azure.py  cohere.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py  openai_compat.py  together.py
helix-lib/src/helix/observability/: ghost_debug.py  replay.py  tracer.py
helix-lib/src/helix/runtime/: engine.py  health.py
helix-lib/src/helix/safety/: audit.py  governor.py  guardrails.py  hitl.py  permissions.py
helix-lib/src/helix/tools/: builtin.py  taxonomy.py
helix-lib/tests/: test_basic.py
src/helix/: __init__.py  config.py  errors.py  interfaces.py  presets.py
src/helix/adapters/: autogen.py
src/helix/cache/: controller.py  plan.py  prefix.py  semantic.py
src/helix/cli/: __main__.py
src/helix/context_engine/: engine.py
src/helix/core/: agent.py  agent_decorator.py  graph.py  group_chat.py  hooks.py  pipeline.py  task.py  tool.py  workflow.py  yaml_config.py
src/helix/eval/: suite.py
src/helix/memory/: store.py
src/helix/models/: complexity.py  router.py
src/helix/models/providers/: anthropic.py  gemini.py  groq.py  mistral.py  openai_compat.py  together.py
src/helix/observability/: ghost_debug.py  replay.py  tracer.py
src/helix/runtime/: engine.py  health.py
src/helix/safety/: audit.py
src/helix/tools/: builtin.py
tests/: test_basic.py  test_new_features.py
